# JsonConverter

./: .gitignore  README.md  setup.cfg  whitelist.txt
src/: __init__.py  app.py  main.py  model.py
src/data/: input.csv
src/templates/: books.html
