[metadata]
name = JsonConverter
author = Philipp Lorber
author_email = lorber190103@sr.htlweiz.at
description = "Converts CSV Files into Json"
version = 1.0.0
url = 
keywords = json
        file
        csv
        converter
        output
        input

[options.entry_points]
console_scripts = 
        json_converter = main:main

[options]
python_requires >= 3.8
package_dir =
        =src
packages = find:

[options.extras_require]
dev = 
  flake8
  flake8-eradicate
  flake8-isort
  flake8-spellcheck
  flake8-variables-names
  flake8-builtins
  Flask
  SQLAlchemy
  Flask-SQLAlchemy

[flake8]
max-line-length=88
exclude = venv
docstring-convention = numpy
dictionaries = en_US,python,technical
